Timekeeping and digit transitions

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,5 @@ debug_tool = blackmagic
 debug_port = /dev/ttyACM0
 lib_deps = newlib
 
-upload_target_power = enable
+#upload_target_power = enable
 upload_port = /dev/ttyACM0
