--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = libopencm3
 upload_protocol = blackmagic
 debug_tool = blackmagic
 debug_port = /dev/ttyACM0
+monitor_speed = 115200
 lib_deps = newlib
 
 upload_target_power = enable
